--- a/application/templates/project/maps.html
+++ b/application/templates/project/maps.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block headcss %}
-    <link rel="stylesheet" href="/static/css/ol.css" type="text/css">
-    <link rel="stylesheet" href="/static/maps.css" type="text/css">
+    <link rel="stylesheet" href="/static/lib/openlayers/ol.css" type="text/css">
+    <link rel="stylesheet" href="/static/lib/fwo/maps.css" type="text/css">
 {% endblock %}
 {% block footjs %}
 
